src/components/GameBoard/GameBoard.css
.game_board {
  width: auto;
  /* max-width: 1200px; */
  margin: 0 auto;
  /* padding: 1rem; */
}

/* .player_hands {
  display: inline-flex;
} */

.player_bank_info {
  display: grid;
  padding-top: 10px;
}

.fixed-card-area {
  min-height: 130px;
  /* adjust to match card height */
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;

  background: rgba(255, 255, 255, 0.05);
  border: 1px solid rgba(255, 255, 255, 0.1);
  border-radius: 12px;
  /* padding: 1rem; */
  /* margin: 1rem auto; */
  margin: 0.5rem auto;
  width: fit-content;
  min-width: 300px;
}

.dealer_section {
  padding-bottom: 1rem;
}

.player_section_header {
  padding-bottom: 10px;
}

.player_hands {
  /* min-height: 90px; */
  /* ensures space even before cards are dealt */
  display: flex;
  justify-content: center;
  gap: 0.5rem;
  flex-wrap: wrap;
}

.hand {
  display: flex;
  flex-direction: column;
  /* overflow: visible; */
  /* gap: 1rem; */
  /* padding-bottom: 6rem;  */
  /* leave space for action buttons */
}

.vegas-button {
  background: linear-gradient(to bottom, #2f2f2f, #1c1c1c);
  color: #f9d342;
  font-weight: 600;
  font-size: 1rem;
  border: 2px solid #a1862f;
  border-radius: 8px;
  /* padding: 0.6rem 1.2rem; */
  text-shadow: 1px 1px 2px #000;
  box-shadow: inset 0 0 3px #000, 0 4px 6px rgba(0, 0, 0, 0.6);
  transition: all 0.2s ease;
  font-family: 'Georgia', serif;
}

.vegas-button:hover {
  background: linear-gradient(to bottom, #3d3d3d, #222);
  box-shadow: 0 0 10px rgba(249, 211, 66, 0.4);
  cursor: pointer;
}

.vegas-button:active {
  transform: translateY(2px);
  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.8);
}

.vegas-button:disabled {
  opacity: 0.5;
  cursor: not-allowed;
  filter: grayscale(60%);
}

/* .game_info {
  padding-top: 10px;
  padding-bottom: 10px;
} */



@media (max-width: 768px) {
  /* .game_board {
    padding: 0.5rem;
  } */
}


@media (max-width: 480px) {
  .game_info {
    padding-top: 10px;
    padding-bottom: 10px;
  }

  .game_info h2 {
    font-size: 1rem;
  }

  .current_bet {
    padding: 10px;
  }

  .hands h3,
  .hands strong {
    font-size: 0.8em;
  }

  .player_hands {
    min-height: 90px;
  }

  .action_buttons {
    display: inline-flex;
    gap: 0.75rem;
    /* font-size: 0.75rem; */
    padding: 0.3rem 0.6rem;
  }

  .vegas-button {
    font-size: 0.8rem;
  }

}

/*
game_info
book_items
bet_controls
hands
player_hands
player_bank_info
*/

